# pyxtrlock

./: pyproject.toml  setup.py
pyxtrlock/: __init__.py
pyxtrlock/scripts/: lock.py  make_lock.py
